syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.group9.warehouse.grpc";
option java_outer_classname = "WarehouseProto";

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc GetUserProfile(EmptyRequest) returns (ProfileResponse);
  rpc UpdateUserProfile(UpdateProfileRequest) returns (ServiceResponse);
  rpc ChangePassword(ChangePasswordRequest) returns (ServiceResponse);
}

service UserManagementService {
  rpc GetUsers (GetUsersRequest) returns (UserListResponse);
  rpc AddUser (AddUserRequest) returns (ServiceResponse);
  rpc SetUserActiveStatus(SetUserActiveRequest) returns (ServiceResponse);
}

service ProductManagementService {
  rpc AddProduct(AddProductRequest) returns (ServiceResponse);
  rpc UpdateProduct(UpdateProductRequest) returns (ServiceResponse);
  rpc SetProductActiveStatus(SetProductActiveRequest) returns (ServiceResponse);
}

service WarehouseService {
  rpc GetProducts(GetProductsRequest) returns (ProductListResponse);
  rpc GetInventory(EmptyRequest) returns (InventoryResponse);
  rpc ImportProduct(TransactionRequest) returns (TransactionResponse);
  rpc ExportProduct(TransactionRequest) returns (TransactionResponse);
  rpc GetHistory(GetHistoryRequest) returns (HistoryResponse);
}

message EmptyRequest {}

message ServiceResponse {
  bool success = 1;
  string message = 2;
}

message PaginationInfo {
  int32 pageNumber = 1;
  int32 pageSize = 2;
  int32 totalPages = 3;
  int64 totalElements = 4;
}

// Dùng để bọc giá trị optional (proto3 không có null)
message BoolValue {
  bool value = 1;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  bool success = 1;
  string message = 2;
  string role = 3;
  string token = 4;
}

message UserProfile {
  string username = 1;
  string role = 2;
  string fullName = 3;
  string email = 4;
  string phone = 5;
  string sex = 6;
  string dateOfBirth = 7;
  bool isActive = 8;
}

message ProfileResponse {
  bool success = 1;
  string message = 2;
  UserProfile profile = 3;
}

message UpdateProfileRequest {
  string fullName = 1;
  string email = 2;
  string phone = 3;
  string sex = 4;
  string dateOfBirth = 5;
}

message ChangePasswordRequest {
  string oldPassword = 1;
  string newPassword = 2;
}

message GetUsersRequest {
  int32 page = 1;
  int32 pageSize = 2;
  string searchTerm = 3;
  optional BoolValue isActive = 4;
}

message UserListResponse {
  repeated UserProfile users = 1;
  PaginationInfo pagination = 2;
}

message AddUserRequest {
  string username = 1;
  string password = 2;
  string role = 3; // "Manager" hoặc "Staff"
  string fullName = 4;
  string email = 5;
}

message SetUserActiveRequest {
  string username = 1;
  bool isActive = 2;
}


message Product {
  string productId = 1;
  string productName = 2;
  bool isActive = 3; // Thêm trạng thái
}

message AddProductRequest {
  string productId = 1;
  string productName = 2;
}

message UpdateProductRequest {
  string productId = 1;
  string newProductName = 2;
}

message SetProductActiveRequest {
  string productId = 1;
  bool isActive = 2;
}

message GetProductsRequest {
  int32 page = 1;
  int32 pageSize = 2;
  string searchTerm = 3; // Tìm theo ID hoặc Tên
  optional BoolValue isActive = 4; // Lọc theo trạng thái
}

message ProductListResponse {
  repeated Product products = 1;
  PaginationInfo pagination = 2;
}

message InventoryItem {
  string productName = 1;
  int32 quantity = 2;
  bool isActive = 3;
}

message InventoryResponse {
  repeated InventoryItem items = 1;
}

message TransactionRequest {
  string productId = 1;
  int32 quantity = 2;
}

message TransactionResponse {
  bool success = 1;
  string message = 2;
  int32 newQuantity = 3;
}

message Transaction {
  string timestamp = 1;
  string clientName = 2; // User thực hiện
  string action = 3;
  string product = 4;
  int32 quantity = 5;
  string result = 6;
}

message GetHistoryRequest {
  int32 page = 1;
  int32 pageSize = 2;
  string startDate = 3;
  string endDate = 4;
}

message HistoryResponse {
  repeated Transaction transactions = 1;
  PaginationInfo pagination = 2;
}